--- a/src/app/ancfcc_home/home/home.component.html
+++ b/src/app/ancfcc_home/home/home.component.html
@@ -44,7 +44,7 @@
       <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
         <div data-aos="zoom-out">
           <h1>Agence Nationale de la Conservation Foncière, du Cadastre et de la Cartographie  <span>ANCFCC</span></h1>
-          <h2>Une administration fiscale marocaine créée en 1915</h2>
+          <!-- <h2>Une administration fiscale marocaine créée en 1915</h2> -->
           <div class="text-center text-lg-start">
             <a  style="cursor: pointer;" class="btn-get-started scrollto">Commencez</a>
           </div>
